修改：--dir 为根目录；--addr 为地址+端口

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>独立私有化智能在线客服系统</title>
+    <title>客服系统</title>
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css?v=0.5.5" />
 </head>
 <body>
@@ -22,9 +22,8 @@
     }
 </style>
 <div class="deployLink">
-    <h1>智能在线客服系统，欢迎您</h1>
-    <a class="btn btn-primary mt-4" href="/chatIndex?kefu_id=kefu2" target="_blank">访客地址</a>
-    <a class="btn btn-primary mt-4" href="/login" target="_blank">登录后台</a>
+    <a class="btn btn-primary mt-4" href="/chatIndex?kefu_id=kefu" target="_blank">访客</a>
+    <a class="btn btn-primary mt-4" href="/login" target="_blank">后台</a>
 </div>
 
 
