--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>智能开源客服系统</title>
+    <title>客服系统</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.15.1/theme-chalk/index.min.css">
     <script src="https://cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
@@ -60,7 +60,6 @@
 <div id="app" class="signin">
     <template>
         <div class="loginHtml">
-            <h1 class="loginTitle">智能在线客服系统</h1>
             <el-form :model="kefuForm"  :rules="rules" ref="kefuForm">
                 <el-form-item  prop="username">
                     <el-input v-model="kefuForm.username" placeholder="用户名"></el-input>
@@ -73,8 +72,6 @@
                 </el-form-item>
             </el-form>
         </div>
-
-        <p class="copyright">智能在线客服系统</p>
 </template>
 </div>
 </body>
