--- a/static/templates/chat_page.html
+++ b/static/templates/chat_page.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
-    <meta name="keywords" content="开源客服系统"/>
-    <meta name="description" content="golang开发的开源免费客服系统,可独立部署客服系统,支持文字/表情/图片/文件发送,支持快捷回复,支持IP黑名单,展示访客信息,后台权限控制"/>
-    <title>开源智能在线客服系统</title>
+    <meta name="keywords" content="客服系统"/>
+    <meta name="description" content=""/>
+    <title>客服系统</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.15.1/theme-chalk/index.min.css">
     <script src="https://cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
     <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
@@ -45,7 +45,6 @@
                         </div>
                         <div class="kefuMe" v-if="v.is_kefu==false" style="display: flex;justify-content: flex-end;">
                             <div class="chatContent chatContent2 replyContentBtn" v-html="v.content"></div>
-                            <el-avatar style="margin-left:10px;flex-shrink: 0;"  :size="36" :src="v.avator"></el-avatar>
                         </div>
                         <div class="clear"></div>
                     </el-row>
@@ -54,15 +53,16 @@
             <div class="chatBoxSend">
 
                 <div class="visitorIconBox">
-                    <el-tooltip content="发送表情" placement="top">
-                        <div class="iconBtn iconfont icon-xiaolian" style="margin-left:10px;font-size: 24px;cursor: pointer;" @click.stop="showFaceIcon==true?showFaceIcon=false:showFaceIcon=true"></div>
+                    <el-tooltip content="表情" placement="top">
+                        <div class="iconBtns iconBtn iconfont icon-xiaolian" style="margin-left:10px;font-size: 24px;cursor: pointer;" @click.stop="showFaceIcon==true?showFaceIcon=false:showFaceIcon=true"></div>
                     </el-tooltip>
 
-                    <el-tooltip content="上传图片" placement="top">
-                        <div class="iconBtn el-icon-picture" id="uploadImg" v-on:click="uploadImg('/uploadimg')" style="font-size: 24px;"></div>
+                    <el-tooltip content="图片" placement="top">
+                        <div class="iconBtns iconBtn el-icon-picture" id="uploadImg" v-on:click="uploadImg('/uploadimg')" style="font-size: 24px;"></div>
                     </el-tooltip>
-                    <el-tooltip content="上传附件" placement="top">
-                        <div  class="iconBtn el-icon-upload" id="uploadFile" v-on:click="uploadFile('/uploadfile')" style="font-size: 26px;"></div>
+
+                    <el-tooltip content="地图" placement="top">
+                        <div  class="iconBtns elIcon el-icon-location" id="uploadFile" v-on:click="qqMap = !qqMap" style="font-size: 26px;"></div>
                     </el-tooltip>
 
                     <div  style="display: none" :title="flyLang.emotions" class="icono-smile visitorIconBtns visitorFaceBtn"></div>
@@ -75,8 +75,8 @@
                     </ul>
                     <div class="clear"></div>
                 </div>
-                 <el-input show-word-limit maxlength="100" :rows="2" type="textarea" resize="none" class="visitorEditorArea"  @focus="scrollBottom;showIconBtns=false" @blur="scrollBottom;showIconBtns=false" v-model="messageContent" v-on:keyup.enter.native="chatToUser">
-                    </el-input>
+                <el-input show-word-limit maxlength="100" :rows="2" type="textarea" resize="none" class="visitorEditorArea"  @focus="scrollBottom;showIconBtns=false" @blur="scrollBottom;showIconBtns=false" v-model="messageContent" v-on:keyup.enter.native="chatToUser"></el-input>
+
                 <el-button type="primary" size="mini"  class="visitorEditorBtn"   :disabled="sendDisabled||messageContent==''" v-on:click="chatToUser();showIconBtns=false"><{flyLang.sent}></el-button>
             </div>
         </div>
@@ -86,6 +86,9 @@
             <div class="allNotice" v-html><{kefuInfo.allNotice}></div>
         </div>
 
+        <iframe v-show="qqMap" style="position: fixed;top: 0;left: 0;z-index: 999999999" id="mapPage" width="100%" height="100%" frameborder=0 src="https://apis.map.qq.com/tools/locpicker?search=1&type=1&key=
+OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77&referer=kefu">
+        </iframe>
 
         <!--//客服代码-->
         <audio id="chatMessageAudio">
@@ -101,5 +104,5 @@
     var LANG=checkLang();
 </script>
 <script src="/assets/js/chat-lang.js?v=0.3.7"></script>
-<script src="/assets/js/chat-page.js?v=rtyrhgfnykug"></script>
+<script src="/assets/js/chat-page.js?v=20230528"></script>
 </html>
