--- a/static/templates/setting_avator.html
+++ b/static/templates/setting_avator.html
@@ -36,7 +36,7 @@
                     <el-form-item label="昵称">
                         <el-input v-model="kefuInfo.nickname"></el-input>
                     </el-form-item>
-                    <el-form-item label="原头像">
+                    <el-form-item label="头像">
                         <el-avatar  :size="120" :src="kefuInfo.avator"></el-avatar>
                     </el-form-item>
                     <el-form-item label="新头像">
