--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -22,8 +22,9 @@
     }
 </style>
 <div class="deployLink">
-    <a class="btn btn-primary mt-4" href="/chatIndex?kefu_id=kefu" target="_blank">访客</a>
-    <a class="btn btn-primary mt-4" href="/login" target="_blank">后台</a>
+    <h1>智能在线客服系统，欢迎您</h1>
+    <a class="btn btn-primary mt-4" href="/chatIndex?kefu_id=kefu2" target="_blank">访客地址</a>
+    <a class="btn btn-primary mt-4" href="/login" target="_blank">登录后台</a>
 </div>
 
 
