--- a/static/templates/chat_page.html
+++ b/static/templates/chat_page.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="客服系统"/>
     <meta name="description" content=""/>
     <title>客服系统</title>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/element-ui/2.15.1/theme-chalk/index.min.css">
-    <script src="https://cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
-    <script src="https://cdn.staticfile.org/element-ui/2.15.1/index.js"></script>
-    <script src="https://cdn.staticfile.org/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="/static/cdn/element-ui/2.15.1/theme-chalk/index.min.css">
+    <script src="/static/cdn/vue/2.6.11/vue.min.js"></script>
+    <script src="/static/cdn/element-ui/2.15.1/index.js"></script>
+    <script src="/static/cdn/jquery/3.6.0/jquery.min.js"></script>
 
 
     <script src="/assets/js/functions.js?v=fgffdwersdccvcbv"></script>
@@ -45,6 +45,7 @@
                         </div>
                         <div class="kefuMe" v-if="v.is_kefu==false" style="display: flex;justify-content: flex-end;">
                             <div class="chatContent chatContent2 replyContentBtn" v-html="v.content"></div>
+                            <el-avatar style="margin-left:10px;flex-shrink: 0;"  :size="36" :src="v.avator"></el-avatar>
                         </div>
                         <div class="clear"></div>
                     </el-row>
@@ -64,9 +65,12 @@
                     <el-tooltip content="地图" placement="top">
                         <div  class="iconBtns elIcon el-icon-location" id="uploadFile" v-on:click="qqMap = !qqMap" style="font-size: 26px;"></div>
                     </el-tooltip>
-
+                    <!--
+                    <el-tooltip content="附件" placement="top">
+                        <div  class="iconBtn el-icon-upload" id="uploadFile" v-on:click="uploadFile('/uploadfile')" style="font-size: 26px;"></div>
+                    </el-tooltip>
                     <div  style="display: none" :title="flyLang.emotions" class="icono-smile visitorIconBtns visitorFaceBtn"></div>
-
+					-->
                     <div class="clear"></div>
                 </div>
                 <div class="faceBox visitorFaceBox" v-show="showFaceIcon">
